--- a/darkest-stagecoach/src/index.css
+++ b/darkest-stagecoach/src/index.css
@@ -1,3 +1,7 @@
+* {
+    cursor: url('assets/cursor/arrow.png'), auto;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -5,6 +9,22 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    cursor: url('assets/cursor/arrow.png'), auto;
     background-color: rgb(47, 49, 41);
+}
+
+a {
+    color: #d3552e;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: url('assets/cursor/pointer.png'), auto;
+}
+
+.MuiPaper-root:hover, .MuiPaper-root *:hover {
+    cursor: url('assets/cursor/pointer.png'), auto;
+}
+
+.MuiPaper-root:hover {
+    box-shadow: 0px 3px 5px -1px #D3552E, 0px 5px 8px 0px #D3552E, 0px 1px 14px 0px #D3552E;
 }
