--- a/darkest-stagecoach/src/index.css
+++ b/darkest-stagecoach/src/index.css
@@ -2,6 +2,16 @@
     cursor: url('assets/cursor/arrow.png'), auto;
 }
 
+/* Custom scroll bar */
+*::-webkit-scrollbar {
+    width: 4px;
+    color: rgb(47, 49, 41);
+}
+*::-webkit-scrollbar-thumb {
+    background-color: #d3552e;
+    border-radius: 10px;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -16,16 +26,28 @@ a {
     color: #d3552e;
     text-decoration: none;
 }
-
 a * {
     color: #d3552e;
 }
-
 a:hover {
     cursor: url('assets/cursor/pointer.png'), auto;
 }
-
 a *:hover {
+    cursor: url('assets/cursor/pointer.png'), auto;
+}
+
+/* Overrides to look like an <a> tag */
+.anchor {
+    color: #d3552e !important;
+    text-decoration: none;
+}
+.anchor * {
+    color: #d3552e !important;
+}
+.anchor:hover {
+    cursor: url('assets/cursor/pointer.png'), auto;
+}
+.anchor *:hover {
     cursor: url('assets/cursor/pointer.png'), auto;
 }
 
@@ -37,4 +59,8 @@ a *:hover {
 .paper-with-shadow:hover {
     box-shadow: 0px 3px 5px -1px #5e3124, 0px 5px 8px 0px #5e3124,
         0px 1px 14px 0px #5e3124;
+}
+
+*:focus {
+    outline: 0;
 }
