--- a/darkest-stagecoach/src/index.css
+++ b/darkest-stagecoach/src/index.css
@@ -4,6 +4,7 @@
     --bg-secondary: #272822;
     --accent-primary: #d3552e;
     --accent-secondary: #5e3124;
+    --accent-hover: #ff6738;
     --font-primary: #cccccc;
     --cursor-default: url('assets/cursor/arrow.png'), auto;
     --cursor-pointer: url('assets/cursor/pointer.png'), auto;
@@ -44,6 +45,7 @@ a * {
 }
 a:hover {
     cursor: var(--cursor-pointer);
+    color: var(--accent-hover);
 }
 a *:hover {
     cursor: var(--cursor-pointer);
@@ -59,9 +61,11 @@ a *:hover {
 }
 .anchor:hover {
     cursor: var(--cursor-pointer);
+    color: var(--accent-hover) !important;
 }
 .anchor *:hover {
     cursor: var(--cursor-pointer);
+    color: var(--accent-hover) !important;
 }
 
 .cursor-pointer * {
