Fixing errors and scroll top button

--- a/darkest-stagecoach/src/index.css
+++ b/darkest-stagecoach/src/index.css
@@ -15,6 +15,10 @@
     cursor: var(--cursor-default);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* Custom scroll bar */
 *::-webkit-scrollbar {
     width: 4px;
