--- a/darkest-stagecoach/src/index.css
+++ b/darkest-stagecoach/src/index.css
@@ -21,6 +21,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.hidden {
+    display: none !important;
+}
+
 /* Custom scroll bar */
 *::-webkit-scrollbar {
     width: 4px;
